@@ -22,6 +22,7 @@ Version 2.1.0 - SVN
    run script code.
  - Fix make_passwords.sh to cope with htpasswd2 instead of htpasswd. Thanks
    Tobias Werth for the patch.
+ - Fix 2 generate_config.sh bugs: quoting error and tempfile cleanup.
 
 Version 2.0.0 - SVN
 -------------------
